# GlobalProtect-openconnect-dw

./: .dockerignore  .gitignore  .gitmodules  CHANGES.md  Cargo.toml  Makefile  README.md  changelog.md  flake.nix  todo.md
.github/: FUNDING.yml
.github/workflows/: build.yaml  copr.yaml  nix.yaml  publish-aur-git.yaml  publish-ppa.yaml  release.yaml  update-flake-hashes.yaml
apps/gpauth/: Cargo.toml  index.html  tauri.conf.json
apps/gpauth/src/: cli.rs
apps/gpclient/src/: connect.rs  hip.rs  launch_gui.rs  session.rs
apps/gpgui/: ARCHITECTURE.md  Cargo.toml  Makefile  tauri.conf.json
apps/gpgui-helper/: package.json  pnpm-lock.yaml
apps/gpgui-helper/src-tauri/: tauri.conf.json
apps/gpgui-helper/src-tauri/src/: updater.rs
apps/gpgui/capabilities/: default.json
apps/gpgui/packaging/: gpgui.desktop  io.github.techneut92.gpgui.desktop
apps/gpgui/packaging/flatpak/: cargo-sources.json  flatpak-build.sh  io.github.techneut92.gpgui.desktop  io.github.techneut92.gpgui.metainfo.xml  io.github.techneut92.gpgui.yml
apps/gpgui/src/: autostart.rs  client.rs  config.rs  connect.rs  crypto.rs  dbus_client.rs  main.rs  pkcs11.rs  proto.rs  secrets.rs  single_instance.rs  state.rs  system.rs  tiling.rs  transport.rs  tray.rs  vault.rs  vpn.rs
apps/gpgui/ui/: dropdown.js  index.html  manager.html  no-zoom.js  settings.html  theme.css
apps/gpservice/: Cargo.toml
apps/gpservice/src/: auth_flow.rs  cli.rs  dbus_service.rs  gateway_pin.rs  main.rs  sleep_monitor.rs  vpn_task.rs  ws_server.rs
crates/auth/src/browser/: auth_server.rs
crates/auth/src/webview/: webview_auth.rs
crates/common/: build.rs
crates/common/src/: constants.rs
crates/gp-protocol/: Cargo.toml
crates/gp-protocol/src/: env.rs  event.rs  gateway.rs  lib.rs  os.rs  request.rs  session.rs  state.rs
crates/gp-protocol/tests/: wire_format.rs  wire_format.snapshot
crates/gpapi/: Cargo.toml
crates/gpapi/src/: gp_params.rs  lib.rs  session.rs
crates/gpapi/src/gateway/: login.rs  mod.rs
crates/gpapi/src/portal/: config.rs
crates/gpapi/src/process/: command_traits.rs  gui_launcher.rs  mod.rs
crates/gpapi/src/service/: event.rs  request.rs  vpn_env.rs  vpn_state.rs
crates/gpapi/src/utils/: env_utils.rs  mod.rs  pkcs11.rs  request.rs  window.rs  winsign.rs
crates/openconnect/src/: vpn.rs  vpn_utils.rs
crates/openconnect/src/ffi/: mod.rs  vpn.c  vpn.h
docs/: features-todo.md  split-plan.md
packaging/apk/: APKBUILD.in
packaging/aur/globalprotect-openconnect-git/: .SRCINFO  PKGBUILD  gp.install
packaging/binary/: Makefile.in
packaging/deb/: control.in  globalprotect-openconnect-dw-gui.install  globalprotect-openconnect-dw.install  postrm  rules.in
packaging/docker/alpine/: Dockerfile
packaging/files/usr/libexec/gpclient/: vpnc-script
packaging/files/usr/share/applications/: gpclient.desktop
packaging/files/usr/share/dbus-1/system-services/: io.github.techneut92.GPService.service
packaging/files/usr/share/dbus-1/system.d/: io.github.techneut92.GPService.conf
packaging/files/usr/share/polkit-1/actions/: io.github.techneut92.gpgui.policy  io.github.techneut92.gpservice.policy
packaging/files/usr/share/polkit-1/rules.d/: 49-gpservice.rules
packaging/pkgbuild/: PKGBUILD.in
packaging/rpm/: globalprotect-openconnect.changes.in  globalprotect-openconnect.spec.in
scripts/: deb-install.sh  gh-release.sh  obs-publish.sh  update-flake-hashes.sh
