[package]
name = "gpgui"
rust-version.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gpgui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Reuse the suite's auth pipeline + gpservice wire types. The `webview-auth`
# marker feature (empty — pulls NO webkit) just lets the auth launcher pass
# `--default-browser`/webview flags through to the gpauth binary.
gpapi = { path = "../../crates/gpapi", features = ["webview-auth"] }

anyhow.workspace = true
base64.workspace = true
directories.workspace = true
futures-util.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "signal", "fs"] }
tauri = { workspace = true }

chacha20poly1305 = { version = "0.10", features = ["std"] }
# Master-PIN → key derivation for the encrypted identity vault.
argon2 = "0.5"
# ksni async-io backend (blocking tray on a plain thread; no tokio reactor needed).
ksni = { version = "0.3.5", default-features = false, features = ["blocking", "async-io"] }
# Desktop notifications on connect/disconnect (D-Bus).
notify-rust = "4"
pollster = "0.4"
# Native file picker via xdg-desktop-portal (no GTK).
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
tokio-tungstenite = "0.29"
# D-Bus client for the gpservice system service (Flatpak transport).
zbus = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
