[package]
name = "gpgui"
rust-version.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gpgui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Reuse the suite's auth pipeline + gpservice wire types.
gpapi = { path = "../../crates/gpapi", features = ["webview-auth"] }
gp-protocol = { workspace = true }
# The GUI runs SAML SSO in-process (it is already a Tauri + webkit app): the
# embedded webview (`webview-auth`) and the system-browser flow (`browser-auth`).
# This is what lets the backend (gpauth/gpclient) drop webkit — see docs/split-plan.md.
auth = { path = "../../crates/auth", features = ["webview-auth", "browser-auth"] }

anyhow.workspace = true
base64.workspace = true
directories.workspace = true
futures-util.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "signal", "fs"] }
tauri = { workspace = true }

chacha20poly1305 = { version = "0.10", features = ["std"] }
# Master-PIN → key derivation for the encrypted identity vault.
argon2 = "0.5"
# ksni async-io backend (blocking tray on a plain thread; no tokio reactor needed).
ksni = { version = "0.3.5", default-features = false, features = ["blocking", "async-io"] }
# Desktop notifications on connect/disconnect (D-Bus).
notify-rust = "4"
# Decode the bundled app icon into an ARGB tray pixmap (status-tinted logo).
png = "0.17"
# Optional master-PIN storage in the desktop secret store (freedesktop Secret
# Service → GNOME Keyring / KDE KWallet / COSMIC). Sync API; all ops best-effort.
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
# Update check against the GitHub Releases API (already in the tree via gpapi).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
pollster = "0.4"
# Native file picker via xdg-desktop-portal (no GTK).
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
tokio-tungstenite = "0.29"
# D-Bus client for the gpservice system service (Flatpak transport).
zbus = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GTK (the toolkit Tauri uses on Linux) — to set the X11 window-type hint so
# auto-tiling WMs (Pop Shell, i3, …) float the fixed-size window. Version must
# match Tauri's gtk; it is already in the tree, so this pulls nothing new.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
# getuid() for the single-instance socket's same-user peer check.
libc = "0.2"
