[package]
name = "gpservice"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../../crates/common" }
gpapi = { path = "../../crates/gpapi", features = ["clap", "logger"] }
gp-protocol = { workspace = true }
openconnect = { path = "../../crates/openconnect" }
clap.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-util.workspace = true
axum = { workspace = true, features = ["ws"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
env_logger.workspace = true
log.workspace = true
compile-time.workspace = true
xz2 = "0.1"
tar = "0.4"
# D-Bus system-service front-end (Flatpak transport) + polkit authorization.
zbus = "5"
zbus_polkit = "5"
