[package]
name = "gp-protocol"
# Versioned independently of the app/backend — bump on wire-format changes.
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
humantime = { workspace = true }
